# ozon-

./: Ozon跟卖铺货自动化系统-产品说明书v3-Web版.docx  开发文档v3-Ozon跟卖铺货自动化系统.md  货源采集技术参考-1688与拼多多.md
ozon-listing-auto/server/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
ozon-listing-auto/server/alembic/: env.py
ozon-listing-auto/server/alembic/versions/: 0001_m1_init.py  0002_m2_source_matching.py  0003_m3_scoring_review.py  0004_m4_pricing_publish.py  0005_m5_publish_pacing.py  0006_m6_create_branch.py  0007_auto_listing_create_fields.py  0008_import_poc.py
ozon-listing-auto/server/app/: main.py  seed.py
ozon-listing-auto/server/app/api/: accounts.py  auth.py  candidates.py  category.py  collect.py  crawler.py  deps.py  imagegen.py  images.py  importer.py  listing.py  llm.py  match.py  ozon_catalog.py  pace.py  products.py  publish.py  review.py  score.py  settings.py  shops.py  sources.py  system.py  tasks.py  users.py  ws.py
ozon-listing-auto/server/app/core/: config.py  crypto.py  db.py  logging.py  login_throttle.py  progress.py  security.py
ozon-listing-auto/server/tests/: conftest.py  test_account_pool.py  test_accounts_api.py  test_ali_parser.py  test_auth.py  test_build_config.py  test_candidate_ingest.py  test_category_map.py  test_category_tree_config.py  test_category_tree_real.py  test_collect_api.py  test_collector.py  test_composer_hardening.py  test_composer_http.py  test_composer_live.py  test_confirm_create_fields.py  test_crawler_system_config.py  test_create_builder.py  test_crypto.py  test_draft_create_fields.py  test_embedder.py  test_filtering.py  test_fixtures.py  test_health.py  test_image_search_ingest.py  test_imagegen.py  test_imagegen_config.py  test_imagegen_http.py  test_imagegen_openai.py  test_imager_worker.py  test_import_excel_api.py  test_import_models.py  test_importer_api.py  test_ingest.py  test_listing_api.py  test_listing_builder.py  test_listing_models.py  test_live_1688.py  test_live_category_tree.py  test_live_clip.py  (+54 more)
(+250 files in other folders)
